--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 
             <div class="work__container bd-grid">
                 <div class="work__img">
-                    <img src="assets/img/Courses1.jpeg" alt="">
+                    <img src="assets/img/courses1.jpeg" alt="">
                     <p>C programming learn from merege computer Institute Gandhi Nagar Gujrat.</p></br>
                 </div>
                 <div class="work__img">
